--- a/.gitignore
+++ b/.gitignore
@@ -8,10 +8,54 @@ release.properties
 dependency-reduced-pom.xml
 buildNumber.properties
 
-# IDE
+# IDE - IntelliJ IDEA
 .idea/
 *.iml
 *.iws
+out/
 
-# Other
+# IDE - Eclipse
+.classpath
+.project
+.settings/
+bin/
+
+# IDE - VSCode
+.vscode/
+
+# Logs
+logs/
+*.log
+
+# Test Reports
+test-output/
+extent-reports/
+screenshots/
+allure-results/
+allure-report/
+
+# OS
 .DS_Store
+Thumbs.db
+
+# Compiled class files
+*.class
+
+# Package Files
+*.jar
+*.war
+*.nar
+*.ear
+*.zip
+*.tar.gz
+*.rar
+
+# Virtual machine crash logs
+hs_err_pid*
+replay_pid*
+
+# Temporary files
+*.tmp
+*.bak
+*.swp
+*~.nib
