--- a/config.properties
+++ b/config.properties
@@ -1,4 +1,30 @@
+# Browser Configuration
 browser=chrome
+headless=true
+
+# Test URLs
 url=http://the-internet.herokuapp.com/login
+
+# Test Credentials
 username=tomsmith
 password=SuperSecretPassword!
+
+# Timeout Configuration (in seconds)
+implicit.wait=10
+explicit.wait=15
+page.load.timeout=30
+
+# Parallel Execution
+thread.count=3
+
+# Retry Configuration
+max.retry.count=2
+
+# Screenshot Configuration
+capture.screenshot.on.failure=true
+screenshot.path=target/screenshots/
+
+# Report Configuration
+report.path=target/extent-reports/
+report.title=Automation Test Report
+report.name=Test Execution Results
